--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveTask('m1')"> Continue</a>
         </div>
     </div>
 </div>
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveTask('m2')"> Continue</a>
         </div>
     </div>
 </div>
