--- a/SinglePage/templates/cards/task_pre.html
+++ b/SinglePage/templates/cards/task_pre.html
@@ -34,6 +34,7 @@
         </div>
         <div class="card-body">
             <div class="container">
+                <p id="errorp1" class="error">
                 {% for task in p1 %}
                     <p class="card-text">{{ task.description }}</p>
                     {% if task.details|length > 0 %}
@@ -48,6 +49,7 @@
                     {% endif %}
                     {#                        <br>#}
                     {#                    <div class="container">#}
+                    <p id="errorp1{{ task.pk }}" class="error_sub">
                     <div class="row">
                         {% for arr in array_p1|dict_key:task.pk %}
                             <div class="col-xs-12 col-sm-3 radiobtn">
@@ -67,7 +69,7 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveTask('p1')"> Continue</a>
+            <a class="btn btn-next" onclick="saveTask('p1')"> Continue</a>
         </div>
     </div>
 </div>
@@ -84,6 +86,7 @@
         </div>
         <div class="card-body">
             <div class="container">
+                <p id="errorp2" class="error">
                 {% for task in p2 %}
                     <p class="card-text">{{ task.description }}</p>
                     {% if task.details|length > 0 %}
@@ -96,6 +99,7 @@
                         {% endwith %}
                         <br><br>
                     {% endif %}
+                    <p id="errorp2{{ task.pk }}" class="error_sub">
                     <div class="row">
                         {% for arr in array_p2|dict_key:task.pk %}
                             <div class="col-xs-12 col-sm-3 radiobtn">
@@ -114,7 +118,7 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveTask('p2')"> Continue</a>
+            <a class="btn btn-next" onclick="saveTask('p2')"> Continue</a>
         </div>
     </div>
 </div>
