Save answers from questionnaire

--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -55,7 +55,7 @@
     <div class="card">
         {% include 'cards/imi_main.html' %}
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="saveQuestionnaire('main', 'IMI'); setData('finish')"> Continue</a>
+            <a class="btn btn-next" onclick="saveQuestionnaire('main', 'IMI');"> Continue</a>
         </div>
     </div>
 </div>
