Add error msg to personal info

--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -21,7 +21,7 @@
     <div class="card">
         {% include 'cards/personal_info.html' %}
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress(); setData('personal')"> Continue</a>
+            <a class="btn btn-next" onclick="setData('personal')"> Continue</a>
         </div>
     </div>
 </div>
