--- a/SinglePage/templates/cards/personal_info.html
+++ b/SinglePage/templates/cards/personal_info.html
@@ -8,14 +8,18 @@
     </div>
 </div>
 <div class="card-body">
+    <p id="errorPersonal" class="error">
     <p class="card-text">
         How old are you?
+    <p id="errorPersonalAge" class="error_sub"></p>
         <input type="number" min="0" step="1" id="age" name="age" class="form-control"  style="width: 200px">
         <hr>
         What is your nationality?
-        <input type="text" id="nationality" name="nationality" class="form-control" >
+    <p id="errorPersonalNation" class="error_sub"></p>
+        <input type="text" id="nationality" name="nationality" class="form-control">
         <hr>
         With which gender do you identify yourself?
+    <p id="errorPersonalGender" class="error_sub"></p>
         <div class="form-check">
         <input class="form-check-input" type="radio" name="gender" id="male">
             <label class="form-check-label" for="male">
